--- a/start.html
+++ b/start.html
@@ -4,11 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Non Semantic</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> This Is my First Repository
-    </h1>
+    <div class="header">
+        
+        <nav>
+            <ul>
+                <li> <a href="start.html">Home</a> </li>
+                <li><a href="semantic.html">About</a>
+                    <ul class="dropdown">
+                        <li> <a href="start.html">Home</a> </li>
+                        <li><a href="semantic.html">About</a></li>
+                        <li><a href="html-form.html">Contact</a></li>
+                        <li><a href="html-table.html">Main</a></li>
+                        
+                    </ul>
+                </li>
+                <li><a href="html-form.html">Contact</a></li>
+                <li><a href="html-table.html">Main</a></li>
+            </ul>
+        </nav>
+        <h3>Wellcome to my personal website</h3>
+    </div>
+<div class="blogs">
+    <div class="blog1">
+        <h3>Blog1</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates deleniti nostrum explicabo accusamus laborum in, fugiat esse debitis dignissimos saepe maiores minima. Similique placeat minima id hic. Adipisci facere quae nam itaque, laboriosam harum blanditiis quis et dignissimos odio facilis tempore cum, ipsa minima at! Similique obcaecati enim consectetur itaque dolores laborum ullam? Nobis sint sapiente cum ipsa perspiciatis quibusdam?</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio et cupiditate, eaque ut suscipit libero beatae ratione fugiat doloremque adipisci nihil, placeat accusantium consequatur vitae magni esse dolor quod reprehenderit!</p>
+    </div>
+    <div class="blog2">
+        <h3>Blog2</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates deleniti nostrum explicabo accusamus laborum in, fugiat esse debitis dignissimos saepe maiores minima. Similique placeat minima id hic. Adipisci facere quae nam itaque, laboriosam harum blanditiis quis et dignissimos odio facilis tempore cum, ipsa minima at! Similique obcaecati enim consectetur itaque dolores laborum ullam? Nobis sint sapiente cum ipsa perspiciatis quibusdam?</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio et cupiditate, eaque ut suscipit libero beatae ratione fugiat doloremque adipisci nihil, placeat accusantium consequatur vitae magni esse dolor quod reprehenderit!</p>
+    </div>
+    <div class="blog3">
+        <h3>Blog3</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates deleniti nostrum explicabo accusamus laborum in, fugiat esse debitis dignissimos saepe maiores minima. Similique placeat minima id hic. Adipisci facere quae nam itaque, laboriosam harum blanditiis quis et dignissimos odio facilis tempore cum, ipsa minima at! Similique obcaecati enim consectetur itaque dolores laborum ullam? Nobis sint sapiente cum ipsa perspiciatis quibusdam?</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio et cupiditate, eaque ut suscipit libero beatae ratione fugiat doloremque adipisci nihil, placeat accusantium consequatur vitae magni esse dolor quod reprehenderit!</p>
+    </div>
+</div>
+
+<div class="photo-album">
+
+</div>
+
+<div class="footer">
+    copyright of the year 2050
+</div>
 </body>
 </html>
